--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-materialui-notifications": "^0.5.1",
     "react-notify-toast": "^0.4.0",
     "react-promise": "^2.0.2",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
