--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "1.1.0",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
+    "toastr": "^2.1.4",
     "uuid": "^3.2.1"
   },
   "scripts": {
@@ -36,5 +37,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "less": "^3.0.4",
+    "less-loader": "^4.1.0"
   }
 }
